--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="pt">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista</title>
-    <link rel="stylesheet" href="index.css">
-
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="index.css" />
+    <script src="https://kit.fontawesome.com/29ee0bc57e.js" crossorigin="anonymous">
+    </script>
+    <title>To Do List</title>
 </head>
+
 
 <body>
     <div class="container">
@@ -17,8 +18,10 @@
             <input type="text" id="listItem" autocomplete="off" placeholder="List Item" />
             <button id="add">Add</button>
         </form>
-        <ul id=list></ul>
     </div>
+    <!---exibiremos os itens de entrada em elementos <li> quando obtermos as entradas do usuário.-->
+    <ul id=list></ul>
+
 
     <script src="index.js"></script>
 </body>
